welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:4: error: reassignment to val
  while(getX=6 && getY=0){
            ^