welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  baisseBrosse()
  avance()
  while(getX=6 && getY=0){
    if(estFaceMur()){ 
      gauche()
      avance()
      droite()
    }
    else{ avance()}
  }
}